--- a/cookbook/templates/base.html
+++ b/cookbook/templates/base.html
@@ -12,11 +12,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Cookbook</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                <li><a href="{{ url_for('cookbook.cookbooks') }}">Cookbooks</a></li>
+                <li><a href="{{ url_for('recipe.recipes') }}">Recipes</a></li>
+                <li><a href="{{ url_for('product.products') }}">Products</a></li>
             </ul>
         </div>
     </div>
