--- a/cookbook/templates/cookbook/single.html
+++ b/cookbook/templates/cookbook/single.html
@@ -7,7 +7,7 @@
 <div class="page-header">
     <h1>Name: {{ cookbook.name }}</h1>
     {% for recipe in cookbook.recipes %}
-    <p>{{ loop.index }}. {{ recipe.name }}</p>
+    <p>{{ loop.index }}. <a href="{{ url_for('recipe.recipe', name=recipe.name) }}">{{ recipe.name }}</a></p>
     {% endfor %}
 </div>
 {% endblock %}
