--- a/cookbook/templates/product/all.html
+++ b/cookbook/templates/product/all.html
@@ -7,7 +7,7 @@
 <div class="page-header">
     <h2>All products:</h2>
     {% for product in products %}
-    <p>Name: {{ product.name }}, Shop link: {{ product.shop_link }}</p>
+    <p><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></p>
     {% endfor %}
 </div>
 {% endblock %}
