--- a/cookbook/templates/cookbook/not_found.html
+++ b/cookbook/templates/cookbook/not_found.html
@@ -5,9 +5,6 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h2>All products:</h2>
-    {% for product in products %}
-    <p><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></p>
-    {% endfor %}
+    <h1>Cookbook `{{ name }}` not found.</h1>
 </div>
 {% endblock %}
