--- a/cookbook/templates/cookbook/success.html
+++ b/cookbook/templates/cookbook/success.html
@@ -5,9 +5,6 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h2>All products:</h2>
-    {% for product in products %}
-    <p><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></p>
-    {% endfor %}
+    <h2>Cookbook {{ session.get('cookbook_name') }} added.</h2>
 </div>
 {% endblock %}
