--- a/cookbook/templates/recipe/single.html
+++ b/cookbook/templates/recipe/single.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Cookbook{% endblock %}
+{% block title %}Recipe{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h2>All products:</h2>
-    {% for product in products %}
+    <h1>Name: {{ recipe.name }}</h1>
+    {% for product in recipe.products %}
     <p><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></p>
     {% endfor %}
 </div>
