--- a/cookbook/templates/cookbook/all.html
+++ b/cookbook/templates/cookbook/all.html
@@ -6,8 +6,11 @@
 {% block page_content %}
 <div class="page-header">
     <h2>All cookbooks:</h2>
-    {% for cookbook in cookbooks %}
-    <p>{{ loop.index }}. <a href="{{ url_for('cookbook.cookbook', name=cookbook.name) }}">{{ cookbook.name }}</a></p>
-    {% endfor %}
+    <ol>
+        {% for cookbook in cookbooks %}
+        <li><a href="{{ url_for('cookbook.cookbook', name=cookbook.name) }}">{{ cookbook.name }}</a>
+        </li>
+        {% endfor %}
+    </ol>
 </div>
 {% endblock %}
