--- a/cookbook/templates/product/all.html
+++ b/cookbook/templates/product/all.html
@@ -6,8 +6,13 @@
 {% block page_content %}
 <div class="page-header">
     <h2>All products:</h2>
-    {% for product in products %}
-    <p><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></p>
-    {% endfor %}
+    <ol>
+
+        {% for product in products %}
+        <li><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></li>
+        {% endfor %}
+
+    </ol>
+
 </div>
 {% endblock %}
