--- a/cookbook/templates/recipe/all.html
+++ b/cookbook/templates/recipe/all.html
@@ -6,8 +6,10 @@
 {% block page_content %}
 <div class="page-header">
     <h2>All recipes:</h2>
-    {% for recipe in recipes %}
-    <p><a href="{{ url_for('recipe.recipe', name=recipe.name) }}">{{ recipe.name }}</a> </p>
-    {% endfor %}
+    <ol>
+        {% for recipe in recipes %}
+        <li><a href="{{ url_for('recipe.recipe', name=recipe.name) }}">{{ recipe.name }}</a> </li>
+        {% endfor %}
+    </ol>
 </div>
 {% endblock %}
