--- a/cookbook/templates/recipe/single.html
+++ b/cookbook/templates/recipe/single.html
@@ -6,8 +6,10 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Name: {{ recipe.name }}</h1>
-    {% for product in recipe.products %}
-    <p><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></p>
-    {% endfor %}
+    <ol>
+        {% for product in recipe.products %}
+        <li><a href="{{ url_for('product.product', name=product.name) }}">{{ product.name }}</a></li>
+        {% endfor %}
+    </ol>
 </div>
 {% endblock %}
